[package]
name = "docker-cron"
version = "1.0.1"
edition = "2021"
description = "Start Docker containers on a cron-compatible schedule"
license = "MIT"
repository = "https://github.com/decafcode/docker-cron"

[package.metadata.release]
publish = false

[dependencies]
anyhow = "1.0.98"
bollard = "0.19.1"
chrono = "0.4.41"
cron = "0.15.0"
thiserror = "2.0.12"
tokio = { version = "^1.46.1", features = ["rt", "signal"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "std",
] }
